--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-
+.panel {
+  width: 300px;
+  margin: 50px auto; /* Centra el panel */
+  padding: 20px;
+  background-color: white;
+}
+.words {
+  font-size: 18px;
+  color: black;
+}
