--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 50px auto; /* Centra el panel */
   padding: 20px;
   background-color: white;
-  border: 0.02rem solid black;
+  border: 1px solid black;
 }
 .words {
   font-size: 18px;
