--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .panel {
-  width: 30rem;
+  width: 40rem;
   height: 30rem;
   margin: 50px auto; /* Centra el panel */
   padding: 20px;
@@ -9,4 +9,5 @@
 .words {
   font-size: 18px;
   color: black;
+  border: 1px solid black;
 }
