--- a/style.css
+++ b/style.css
@@ -1,31 +1,29 @@
-body {
-   font-family: 'Sora', monospace;
-}
 
 .panel {
   width: 76vw;
   height: 40vw;
   margin: 50px auto;
   padding: 20px;
-  background: #555151;
+  background: black;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: center;
   position: relative;
 }
 
 .dialogue {
   height: 33%;
-  width: 99%;
-  background-color: white;
-  position: relative;
+  width: 95%;
+  background-color: black;
+  border: 1px solid #04ca04;
   }
 
 .words {
+  font-family: 'VT323', monospace;
   font-size: 2.5vw;
-  color: black;
+  color: #04ca04;
   position: relative;
   text-align: left;
   margin: 1rem;
-  
-}
+  }
