--- a/style.css
+++ b/style.css
@@ -27,3 +27,11 @@
   text-align: left;
   margin: 1rem;
   }
+  .instruction{
+  font-family: 'VT323', monospace;
+  font-size: 2.5vw;
+  color: #04ca04;
+  position: relative;
+  text-align: left;
+  margin: 1rem;
+  }
